# capstone-platform

./: .env.local  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  testServer.py
.github/workflows/: python-app.yml
schema-migrations/: README.md  down-confirm.js  generate.js  migrate.js  package-lock.json  package.json  setup_local_db.sh  tsconfig.json  umzug.ts  up-confirm.js
schema-migrations/migrations/: 2023.08.30T23.42.50.140.test.js  2023.09.05T02.25.19.961.up.js
server/: __init__.py
server/api/: app.py  demo_routes.py  dummy_routes.py  frontend_routes.py  modem_routes.py  routes.py  sample_socket_server.py  socket_events.py
server/core/: constants.py  db.py  drone_location.py  mock_request.py  requestTracker.py
