[tool.poetry]
name = "capstone platform"
version = "0.1.0"
description = "Houses the backend and database migration scripts"

[tool.poetry.dependencies]
python = "^3.8"
boto3 >="1.26.158",
flask >= "2.3.2",
flask-cors >= "4.0.0",

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = "test"

[tool.flit.metadata.requires-extra]
dev = [
    "black>=23.3.0",
    "bump2version>=1.0.1",
    "mypy>=1.4.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "pytest",
    "pytest-mock",
]