[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]

module="server"
author="D Valdivia & J Kazalien"
description-file = "README.md"
requires = [
    "boto3>=1.26.158",
    "flask>=2.3.2",
    "flask-cors>=4.0.0",
    "flask-socketio",
    "python-dateutil>=2.8.2",
    "pyserial",
    "rioxarray >= 0.14.1",
    "PyJWT>=2.8.0",
    "sqlalchemy~=1.4",
]

[tool.flit.metadata.requires-extra]
dev = [
    "black>=23.3.0",
    "bump2version>=1.0.1",
    "mypy>=1.4.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "pytest",
    "pytest-mock",
]

[tool.isort]
profile = "black"
src_paths = ["lv_calibration_platform"]
skip = ["env", "node_modules"]

[tool.pytest.ini_options]
testpaths = "test"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
